# IRTracer

./: CMakeLists.txt  README.md
cmake-scripts/: TracerConfig.cmake  buildTracerBitcode.cmake  findAndSetLLVM.cmake
example/: hello.c  hello.ll
logutils/: CMakeLists.txt  logutils.c
tracer_pass/: CMakeLists.txt
tracer_pass/include/: .Cache.h.swp  .InstrInfo.h.swp  .InstrInfoFactory.h.swp  .Tracer.h.swp  Cache.h  Debug.h  DerivedInstrInfo.h  InstrInfo.h  InstrInfoFactory.h  Tracer.h
tracer_pass/src/: .Cache.cpp.swp  Cache.cpp  Debug.cpp  DerivedInstrInfo.cpp  InstrInfo.cpp  Tracer.cpp
